# maxjs

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  clean.bat  figma-webapp-playbook.md  figma-webapp-tests.md  setup_webview2.bat
blender/: .gitignore  README.md  SETUP_MAC.md  SYNC_REPORT.md  dev.sh  dev_register.py  test_translation_contract.py
blender/_preview/: snapshot.json
blender/maxjs_blender/: __init__.py  camera_sync.py  contract.py  extract_blender.py  handles.py  ipr_client.js  live_ipr.py  pump.py  serialize.py  server.py  webview2_shim.js
blender/tests/: test_serialize_smoke.py
docs/: OPTIMIZATION_TODO.md  PATCH_NOTES_SINCE_V0.2.5.md  PHYSICS_GAME_API.md  REALTIME_SYNC_ARCHITECTURE.md  REFACTOR_ROADMAP.md  STAGE3_DUAL_WORLD_ARCHITECTURE.md
docs/reference/: GAUSSIAN_SPLATS_README.md
include/: ircinterface.h  itreesinterface.h  tyParticleObjectExt.h  tyVolumeObjectExt.h
projects/active/: main.js  project.maxjs.json
release/: DRAFT_RELEASE_v0.5.1.md
scripts/: deploy-web.mjs  gen-spectral-lut.mjs  gen-tsl-presets.mjs  gi-oct-test.mjs  json-enabled-scan-test.mjs  runtime-layer-smoke.mjs  scene-lights-flashlight-test.mjs  snapshot-deploy.mjs  snapshot-stats.mjs  snapshot-verify.mjs  spectral-kernel-construct-smoke.mjs  spectral-scene-visibility-smoke.mjs  tsl-materials-smoke.mjs
skills/maxjs-runtime/: SKILL.md
src/: dllmain.cpp  maxjs.def  maxjs_core_utils.h  maxjs_geometry_sync.h  maxjs_main.cpp  maxjs_material_slots.h  maxjs_material_sync.h  maxjs_morpher_compat.h  maxjs_panel_bridge.inl  maxjs_panel_callbacks.inl  maxjs_panel_fullsync.inl  maxjs_panel_host.inl  maxjs_panel_project.inl  maxjs_panel_render_window.inl  maxjs_panel_snapshot_animation.inl  maxjs_panel_snapshot_export.inl  maxjs_panel_sync.inl  maxjs_panel_sync_entry.inl  maxjs_scene_extractors.h  resource.h  sync_protocol.cpp  sync_protocol.h  threejs_audio.cpp  threejs_audio.h  threejs_audio.rc  threejs_audio_res.h  threejs_category.h  threejs_deform.cpp  threejs_deform.h  threejs_deform.rc  threejs_deform_res.h  threejs_fog.cpp  threejs_fog.h  threejs_fog.rc  threejs_fog_res.h  threejs_gltf.cpp  threejs_gltf.h  threejs_gltf.rc  threejs_gltf_res.h  threejs_lights.cpp  (+31 more)
test/: cdp_click.js  cdp_console.js  cdp_eval.js  cdp_reload.js  cdp_screenshot.js  webapp_layers_test.html  webapp_preserve3d_test.html  webapp_test_page.html
web/: _gi_churn_denoise.html  _gi_classify_verify.html  _gi_integration_verify.html  _gi_leak_verify.html  _gi_lights_node_verify.html  _gi_probe_verify.html  _gi_reactive_verify.html  _gi_smooth_verify.html  _gi_storagetex_verify.html  _gi_trace_debug.html  _gi_volumes_verify.html  _pt_spec_verify.html  index.html  package-lock.json  package.json  snapshot.html  snapshot_webgpu.html
web/css/: index.css
web/js/: VolumeRenderer.js  canvas_panel.js  composition_overlay.js  css3d_overlay.js  dock_drag.js  dom_panel_forwarding.js  geospatial_sky.js  gi_lights_node.js  gi_oct.js  gi_probes.js  gpu_normals.js  html_texture.js  instance_batching.js  jsmod_registry.js  layer_camera_adapter.js  layer_deform.js  layer_facades.js  layer_manager.js  layer_node_adapter.js  layer_ownership.js  layer_params.js  layer_runtime_overrides.js  layer_utils.js  material_builder.js  material_contract.js  max_basis.js  max_lights_node.js  maxjs_animation.js  maxjs_audio.js  maxjs_fx.js  (+37 more)
(+23 files in other folders)
